# til

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: entry.rs  error.rs  main.rs  main_tests.rs  search.rs
