[package]
name = "today-i-learned"
version = "0.1.0"
edition = "2021"
authors = ["Brian Schnee"]
license = "Unlicense OR MIT"
description = "til is a Rust CLI application that's used to keep track of the important sh%t you want to remember."
repository = "https://github.com/schneedotdev/til"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[[bin]]
name = "til"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.14", features = ["derive"] }
dirs = "5.0.1"

